2009-10-06  Alan Modra  <amodra@bigpond.net.au>

	* read.c (s_reloc): Don't use expression_and_evaluate.

2009-10-02  Peter Bergner  <bergner@vnet.ibm.com>

	* config/tc-ppc.c (md_show_usage): Document -m476.
	* doc/c-ppc.texi (PowerPC-Opts): Document -m476.

2009-10-02  Jakub Jelinek  <jakub@redhat.com>

	* dw2gencfi.c: Include dwarf2dbg.h.
	(DWARF2_FORMAT): Define if not defined.
	(dot_cfi_sections): New function.
	(cfi_pseudo_table): Handle .cfi_sections.
	(CFI_EMIT_eh_frame, CFI_EMIT_debug_frame): Define.
	(cfi_sections): New variable.
	(output_cie, output_fde, select_cie_for_fde): Add eh_frame
	argument, add supporting for outputting .debug_frame
	section.
	(cfi_change_reg_numbers): New function or macro.
	(cfi_finish): Only emit .eh_frame if
	cfi_sections & CFI_EMIT_eh_frame.  Emit .debug_frame if
	cfi_sections & CFI_EMIT_debug_frame.
	* config/tc-ppc.h (md_reg_eh_frame_to_debug_frame): Define.
	* doc/as.texinfo (CFI directives): Document .cfi_sections.

2009-10-01  Peter Bergner  <bergner@vnet.ibm.com>

	* config/tc-ppc.c (md_show_usage): Rename "ppca2" to "a2".
	* doc/c-ppc.texi (PowerPC-Opts): Likewise.

2009-10-01  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (x86_cons): Reformat.

2009-09-29  DJ Delorie  <dj@redhat.com>

	* Makefile.am: Add RX target.
	* configure.in: Likewise.
	* configure.tgt: Likewise.
	* read.c (do_repeat_with_expander): New function.
	* read.h: Provide a prototype for do_repeat_with_expander.
	* doc/Makefile.am: Add RX target documentation.
	* doc/all.texi: Likewise.
	* doc/as.texinfo: Likewise.
	* Makefile.in: Regenerate.
	* NEWS: Mention support for RX architecture.
	* configure: Regenerate.
	* doc/Makefile.in: Regenerate.
	* config/rx-defs.h: New file.
	* config/rx-parse.y: New file.
	* config/tc-rx.h: New file.
	* config/tc-rx.c: New file.
	* doc/c-rx.texi: New file.

2009-09-25  Martin Thuresson  <martint@google.com>

	Update sources to make alpha, arc and arm targets compile cleanly
	with -Wc++-compat: